--- a/frontend/Styling/profile.css
+++ b/frontend/Styling/profile.css
@@ -8,11 +8,20 @@ body {
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    position: relative;
 }
 h1 {
     text-align: center;
     margin-bottom: 20px;
 }
+
+.icon {
+    position: absolute;
+    top: 25px;
+    right: 0;
+    cursor: pointer;
+  }
+
 .profile-info {
     display: flex;
     align-items: center;
@@ -35,3 +44,13 @@ h1 {
     margin: 5px 0;
     font-size: 16px;
 }
+
+.user-details p,
+.user-details input {
+  margin: 10px 0;
+}
+
+#save-button {
+    display: none;
+    margin-top: 20px;
+  }
